--- a/src/scss/05-useful/_display-flex.scss
+++ b/src/scss/05-useful/_display-flex.scss
@@ -76,103 +76,6 @@
 	}
 }
 
-.align {
-	&-items {
-		&-flex-start {
-			align-items: flex-start;
-		}
-
-		&-flex-end {
-			align-items: flex-end;
-		}
-
-		&-center {
-			align-items: center;
-		}
-
-		&-stretch {
-			align-items: stretch;
-		}
-
-		&-baseline {
-			align-items: baseline;
-		}
-	}
-	&-self {
-		&-flex-start {
-			align-self: flex-start;
-		}
-
-		&-flex-end {
-			align-self: flex-end;
-		}
-
-		&-center {
-			align-self: center;
-		}
-
-		&-stretch {
-			align-self: stretch;
-		}
-
-		&-baseline {
-			align-self: baseline;
-		}
-	}
-
-	&-content {
-		&-flex-start {
-			align-content: flex-start;
-		}
-
-		&-flex-end {
-			align-content: flex-end;
-		}
-
-		&-center {
-			align-content: center;
-		}
-
-		&-space-between {
-			align-content: space-between;
-		}
-
-		&-space-around {
-			align-content: space-around;
-		}
-
-		&-space-evenly {
-			align-content: space-evenly;
-		}
-
-		&-stretch {
-			align-content: stretch;
-		}
-
-		&-baseline {
-			align-content: baseline;
-		}
-	}
-}
-
-.gap {
-	@for $index from 1 through 3 {
-		// Generate .flex1
-		&#{$index} {
-			flex: #{$index};
-		}
-	}
-}
-
-.row-gap {
-	@for $index from 1 through 3 {
-		// Generate .flex1
-		&#{$index} {
-			flex: #{$index};
-		}
-	}
-}
-
 .gap {
 	@for $index from 1 through 5 {
 		// Generate .gap-1
